--- a/frontend/src/components/Auth/index.css
+++ b/frontend/src/components/Auth/index.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     /* width: 100vw; */
-    height: 90vh;
+    height: 80vh;
     padding: 30px 0;
     background-color: #eee;
   }
@@ -47,12 +47,12 @@
   }
   
   .single-option > p {
-    margin-left: 10px;
+    margin: 15px 10px 15px 20px;
 
   }
   .single-option > img {
-    width: 30px;
-    height: 30px;
+    width: 36px;
+    height: 27px;
     padding: 0 0 0 10px;
 
   }
